# smallpt-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
examples/: example1.rs  reference.rs
images/: smallpt-uml.dot
src/: bsdf.rs  camera.rs  hit.rs  intersection.rs  lib.rs  main.rs  material.rs  plane.rs  ray.rs  rectangle.rs  scene.rs  sphere.rs  trace.rs  triangle.rs  vector.rs
