[package]
name = "smallpt"
version = "0.3.0"
license = "MIT"
description = "A small ray/pathtracer in Rust, inspired by Kevin Beason's educational 99-lines ray/pathtracer (http://www.kevinbeason.com/smallpt/)"
keywords = ["raytracer", "raytracing", "ray-tracing", "path-tracer"]
authors = ["Colin Barré-Brisebois <colinbb@gmail.com>"]
categories = ["rendering"]
repository = "https://github.com/zigguratvertigo/smallpt-rs"
readme = "README.md"
build = "build.rs"
exclude = ["images/*"]

[badges]
travis-ci = { repository = "zigguratvertigo/smallpt-rs" }

[dependencies]
rayon = "1.0.1"
rand = "0.5.3"
num_cpus = "1.8.0"
log = "0.4.3"
nalgebra = "0.15"
bvh = { git = "https://github.com/zigguratvertigo/bvh.git" }

[dev-dependencies]
minifb = "0.10.6"
structopt = "0.2.10"

[build-dependencies.mml]
version = "0.1"