[package]
name = "smallpt"
version = "0.3.3"
license = "MIT"
description = "A small ray/pathtracer in Rust, inspired by Kevin Beason's educational 99-lines ray/pathtracer (http://www.kevinbeason.com/smallpt/)"
keywords = ["raytracer", "raytracing", "ray-tracing", "path-tracer"]
authors = ["Colin Barré-Brisebois <colinbb@gmail.com>"]
categories = ["rendering"]
repository = "https://github.com/zigguratvertigo/smallpt-rs"
readme = "README.md"
#build = "build.rs"
exclude = ["images/*"]

[badges]
travis-ci = { repository = "zigguratvertigo/smallpt-rs" }

[dependencies]
rayon = "1.3.0"
rand = "0.7.2"
num_cpus = "1.11.1"
log = "0.4.8"
nalgebra = "0.17" # 0.17 matches bvh crate
bvh = "0.3.1"

[dev-dependencies]
minifb = "0.15.1"
structopt = "0.3.7"
