[package]
name = "smallpt"
version = "0.4.1"
license = "MIT"
description = "A small ray/pathtracer in Rust, inspired by Kevin Beason's educational 99-lines ray/pathtracer (http://www.kevinbeason.com/smallpt/)"
keywords = ["raytracer", "raytracing", "ray-tracing", "path-tracer"]
authors = ["Colin Barré-Brisebois <colinbb@gmail.com>"]
categories = ["rendering"]
repository = "https://github.com/zigguratvertigo/smallpt-rs"
readme = "README.md"
#build = "build.rs"
exclude = ["images/*"]

[badges]
travis-ci = { repository = "zigguratvertigo/smallpt-rs" }

[dependencies]
rayon = "1.5.3"
rand = "0.8.5"
num_cpus = "1.13.1"
log = "0.4.17"
bvh = "0.6.0"

[dev-dependencies]
minifb = "0.23.0"
structopt = "0.3.26"
